fix text hidden by the header when clicking on the links

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,11 @@ ol, ul {
     margin-left: 250px;
 }
 
+html {
+    scroll-padding-top: 120px;
+    scroll-behavior: smooth;
+}
+
 /* HEADER */
 
 .center {
